--- a/css/main.css
+++ b/css/main.css
@@ -13,19 +13,19 @@
 }
 
 .tictactoe .row:not(:last-child){
-  border-bottom: 2px solid black;
+  border-bottom: 5px solid black;
 }
 
 .tictactoe .row .column {
   width: 100px;
   height: 100px;
-  font-size: 60px;
+  /*font-size: 60px;*/
   text-align: center;
   float: left;
 }
 
 .tictactoe .row .column:not(:last-child){
-  border-right: 2px solid black;
+  border-right: 5px solid black;
 }
 
 .b-reset {
