--- a/css/main.css
+++ b/css/main.css
@@ -1,38 +1,39 @@
 *{
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+  font-family: 'Happy Monkey', cursive;
 }
 
 .tictactoe {
-  width: 300px;
-  height: 300px;
-  background-color: white;
+    margin: 100px auto 0;
+    border-collapse: collapse;
+    border: 1px hidden;
 }
 
-.tictactoe .row {
-  height: 100px;
+h1 {
+  text-align: center;
+  color:	 #ffff1a;
+  font-size: 50px;
 }
 
-.tictactoe .row:not(:last-child){
-  border-bottom: 5px solid black;
-}
-
-.tictactoe .row .column {
+.tictactoe td {
   width: 100px;
   height: 100px;
-  /*font-size: 60px;*/
+  border: 5px solid black;
   text-align: center;
-  float: left;
+  font-size: 70px;
+
 }
 
-.tictactoe .row .column:not(:last-child){
-  border-right: 5px solid black;
-}
 
 .b-reset {
-  padding: 15px;
+  padding: 18px;
+  font-size: 20px;
   background-color: red;
   color: white;
-  font-weight: 700;
+  margin-top: 50px;
+  margin-left: 590px;
   border: none;
   border-radius: 8px;
 }
